--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-segmented-control/segmented-control": "^2.5.7",
+    "@react-native-segmented-control/segmented-control": "2.5.4",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
-    "expo": "~53.0.7",
-    "expo-asset": "~11.1.5",
-    "expo-file-system": "~18.1.9",
-    "expo-sqlite": "~15.2.9",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
+    "expo": "~52.0.0",
+    "expo-asset": "~11.0.5",
+    "expo-file-system": "~18.0.12",
+    "expo-sqlite": "~15.1.4",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-auto-size-text": "^1.1.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.3.12",
     "typescript": "~5.8.3"
   },
   "private": true
